# libfios

./: .gitignore  CMakeLists.txt  Makefile  README.md  api.c  api.h  binding.gyp  fios-test.ts  index.d.ts  index.js  main.c  package.json
.github/: install-deps.sh
.github/workflows/: build.yml
src/: addon.cpp  binding.gyp  fios-file.c  fios-file.py  libfios-export.c  libfios-export.h  libfios-file.c  libfios-serial.c  libfios-serial.h  libfios-stream.h  libfios.h  libfios.i  libusc.c  libusc.h  usc-file.c  utils.h
src/libfios/: __init__.py  libfios.py
test/: test.nam  test.ts
